--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,7 +35,7 @@
 
       <span class="tasks-list-mark"></span>
     </label>
-         <p style="margin:-25px 0 0 44px; color:#7b7b7b; text-decoration: underline; font-family: brandon4;"><%= link_to "I agree term & condition", frequently_asked_question_path%> </p>
+         <p class="tc_regi"><%= link_to "I agree term & condition", frequently_asked_question_path%> </p>
     </div>
         
      
