--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,7 +35,7 @@
 
       <span class="tasks-list-mark"></span>
     </label>
-         <p class="tc_regi"><%= link_to "I agree term & condition", frequently_asked_question_path%> </p>
+         <p class="tc_regi"><%= link_to "I agree term & condition", frequently_asked_question_path, :style=>"color:#7b7b7b" %> </p>
     </div>
         
      
