--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -35,7 +35,7 @@
 
                   <fieldset class="textbox">
                       <div input id="password">
-                        <%= f.email_field :email, :readonly => true,:style => "font-family: brandon4;", :placeholder=>"Email" %>
+                        <%= f.email_field :email, :disabled => true,:style => "font-family: brandon4;", :placeholder=>"Email" %>
                       </div>
                       <div input id="password">
                         <%= f.text_field :name,:style => "font-family: brandon4;", :placeholder=> "First Name" %>
