--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -85,7 +85,7 @@ $('.masterTooltip').hover(function(){
             <div class="right-side">
               <%= form_for(post, :html=>{ id: "new_post"}) do |f| %>
                 
-                    <div class="post-bg">
+                    <div class="post-bg" style="margin-left: -1px;">
                       <% if post.errors.any? %>
                       <% post.errors.full_messages.each do |message| %>
                         <p style="color: #fd0000;font-size: 12px;"><%= message %></p><br/>
@@ -252,18 +252,18 @@ $('.masterTooltip').hover(function(){
                                 <%= f.text_area :additional_comments,:rows => "5", :class => "comment-area" , "maxlength"=>"300",:placeholder => "Apartment will be accessible all summer",:tabindex => 17%>
                                 </p>
                                 <p>
-                                <%= f.submit "Submit",:class=>"submit-btn",:tabindex => 18 %>&nbsp;&nbsp;&nbsp;&nbsp;
+                                <%= f.submit "Submit",:class=>"submit-btn",:style=>"margin: 37px 0 0; padding: 8px 30px;",:tabindex => 18 %>&nbsp;&nbsp;&nbsp;&nbsp;
                                 
                                 </p>
 
-                                <p style="margin: 39px 0 39px; color: #899199; font-size: 10px; line-height: 11px;">
+                                <p style="margin: 39px 0 0 -26px; color: #899199; font-size: 10px; line-height: 11px;">
                                   <% if post.id %>
                                   <% if post.status == true %>
-                                   &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'Deactive Post', toggle_post_path(post.id), :class=>"post-btn" %>
+                                   &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'Deactive Post', toggle_post_path(post.id), :class=>"post-btn",:style=>"padding: 10px 25px;"%>
                                   <% else %>
-                                   &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'Activate Post', toggle_post_path(post.id), :class=>"post-btn" %>
+                                   &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to 'Activate Post', toggle_post_path(post.id), :class=>"post-btn",:style=>"padding: 10px 25px;" %>
                                   <% end %>
-                                  &nbsp;&nbsp;&nbsp;&nbsp; <%= link_to 'Delete Post', post_path(post.id), method: :delete, data: { confirm: 'Are you sure?' }, :class=>"post-btn" %> 
+                                  &nbsp;&nbsp;&nbsp;&nbsp; <%= link_to 'Delete Post', post_path(post.id), method: :delete, data: { confirm: 'Are you sure?' }, :class=>"post-btn",:style=>"padding: 10px 25px;" %> 
                                 <% end %>
                                 </p>
                             
