--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 
-	<%= render 'home_script' %>
+	<%= render 'home_script', :access_ids => @access_ids %>
 
 <%#= javascript_include_tag "jquery.validate.min","validation" %>
 
