--- a/app/views/messages/sent_messages.html.erb
+++ b/app/views/messages/sent_messages.html.erb
@@ -33,7 +33,7 @@
     
     
     <div class="mail_content">
-    <div><%= message.recipient.email  rescue nil%></div>
+    <div><%= message.recipient_email  rescue nil%></div>
     <div style="margin:0 0 5px 0">Subject: 
       <%= link_to message.subject , message , :class => "bluelink" %>
     </div>
