--- a/app/views/messages/trash_messages.html.erb
+++ b/app/views/messages/trash_messages.html.erb
@@ -33,7 +33,7 @@
    
     
     <div class="mail_content">
-    <div><%= message.sender.email %></div>
+    <div><%= message.sender_email %></div>
     <div style="margin:0 0 5px 0">Subject: 
       <%= link_to message.subject , message , :class => "bluelink" %>
     </div>
