--- a/app/views/order_receives/payments.html.erb
+++ b/app/views/order_receives/payments.html.erb
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <%end%>
-            <%= will_paginate @bookings %>
+          <span class="center_align">  <%= will_paginate @bookings %></span>
         </div>
     </div>
 </div>
