--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
       
-      <%= render 'booking_script' %>
+      <%= render 'booking_script' ,:post => @post%>
 
         <div class="main2">
             <div class="s1">
