--- a/app/views/bookings/search_by_date.html.erb
+++ b/app/views/bookings/search_by_date.html.erb
@@ -49,16 +49,16 @@
                     <% @bookings.each_with_index do |booking, index|%>
                     <div class="booking-box">
                         <div class="booking-col">
-                            <span class="booking-name"><%= booking.poster.name.capitalize rescue nil%> <%= booking.poster.last_name[0,1] rescue nil%></span><% if booking.post.user.provider.present? && booking.post.user_id != current_user.id %>
+                            <span class="booking-name"><%= booking.poster_name.capitalize rescue nil%> <%= booking.poster_last_name[0,1] rescue nil%></span><% if booking.post.user_provider.present? && booking.post_user_id != current_user.id %>
                                 (<%= mutual_friend_list(booking.post.user.id) rescue nil%> mutual friends)<% end %>
                             <p>
-                            <%= booking.post.address%>
+                            <%= booking.post_address%>
                             </p>
                         </div>
                         
                        
                         <div class="booking-col1">
-                        <span>Booking area</span> : <%= booking.post.area %> sq. ft
+                        <span>Booking area</span> : <%= booking.post_area %> sq. ft
                         <p>
                            <%if booking.status.present? %>      
                               <span>Status</span> : <%= booking.status rescue nil%>
@@ -69,14 +69,14 @@
                         </div>
                         
                         <div class="booking-col1">
-                        <span>Drop-off date</span> : <%= booking.post.drop_off_avaibility_start_date.strftime("%d-%m-%Y")%> - <%= booking.post.drop_off_avaibility_end_date.strftime("%d-%m-%Y")%>
+                        <span>Drop-off date</span> : <%= booking.post_drop_off_avaibility_start_date.strftime("%d-%m-%Y")%> - <%= booking.post_drop_off_avaibility_end_date.strftime("%d-%m-%Y")%>
                         <p>
             <span>Booked drop-off</span> 
                         <label class="tasks-list-item">
-                        <%if booking.post.pick_up == true%>
-                          <%= check_box_tag(booking.post.drop_off, value = "1", checked = false, disabled: true)%>
+                        <%if booking.post_pick_up == true%>
+                          <%= check_box_tag(booking.post_drop_off, value = "1", checked = false, disabled: true)%>
                         <%else%>
-                          <%= check_box_tag(booking.post.drop_off, value = "1", checked = true, disabled: true)%>
+                          <%= check_box_tag(booking.post_drop_off, value = "1", checked = true, disabled: true)%>
                         <%end%>
                         <span class="tasks-list-mark"></span>
                         <!--<span class="tasks-list-desc">Left Label</span>-->
@@ -89,14 +89,14 @@
                         </div>
                         
                         <div class="booking-col1">
-                        <span>Pick-up date</span>  : <%= booking.post.pick_up_avaibilty_start_date.strftime("%d-%m-%Y") %> - <%= booking.post.pick_up_avaibility_end_date.strftime("%d-%m-%Y")%>
+                        <span>Pick-up date</span>  : <%= booking.post_pick_up_avaibilty_start_date.strftime("%d-%m-%Y") %> - <%= booking.post_pick_up_avaibility_end_date.strftime("%d-%m-%Y")%>
                         <p>
             <span>Booked pick-up</span>
                         <label class="tasks-list-item">
-                        <%if booking.post.pick_up == true%>
-                          <%= check_box_tag(booking.post.pick_up, value = "1", checked = true, disabled: true)%>
+                        <%if booking.post_pick_up == true%>
+                          <%= check_box_tag(booking.post_pick_up, value = "1", checked = true, disabled: true)%>
                         <%else%>
-                          <%= check_box_tag(booking.post.pick_up, value = "1", checked = false, disabled: true)%>
+                          <%= check_box_tag(booking.post_pick_up, value = "1", checked = false, disabled: true)%>
                         <%end%>
                         <span class="tasks-list-mark"></span>
                         <!--<span class="tasks-list-desc">Left Label</span>-->
@@ -104,7 +104,7 @@
                         </p>
                         </div>
                         
-                  <div class="note"><span>Notes</span> : <%=booking.post.additional_comments rescue nil%>
+                  <div class="note"><span>Notes</span> : <%=booking.post_additional_comments rescue nil%>
                         </div>
                         </div>
                         <%end%> 
