--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -3,7 +3,9 @@
 <div class="wrapper">
 <div class="main">   
 <div class="main4">
-<div class="main-new" style="border-top: 1px solid #eeeeee;">
+<div class="main-new">
+    <div style="border-top: 1px solid #eeeeee;margin-left:270px;">
+   </div>
             <ul class="verticle-menu" style="min-height:500px;" >
       
             <li class="active"><%= link_to 'Contact-Us', home_contactus_path %></li>
@@ -28,7 +30,8 @@
             <div class="help" style="margin-width: 268px;">help@dinobo.com </div>
              </div>
 
-               </div>              
+               </div>     
+
 </div>
 </div>
 </div>
