--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,2 +1,2 @@
 <div style="width:40%;"><h4> New Message</h4></div>
-<div style="padding:5px"><%= render 'form' %></div>    
+<div style="padding:5px"><%= render 'form' ,:message => @message %></div>    
