--- a/app/views/messages/user_message.html.erb
+++ b/app/views/messages/user_message.html.erb
@@ -4,10 +4,13 @@
                 <% if params[:recv_id].present?%>
 					<ul class="chat-menu">
 						<% @user_messages_sender.each do |user_messages|%>
-			            <li <% if user_messages.sender_id = params[:recv_id] %> class="active" <% end %>>
+			            <li <% if user_messages.sender_id == params[:recv_id].to_i %> class="active" <% end %>>
+			            	<% if user_messages.sender_id == params[:recv_id].to_i %>
+			            		<span></span>
+			            	<% end %>
 			            	<% unless user_messages.sender.id == current_user.id%>	
 			            	<a style="margin:0" href="<%= messages_path(:recv_id =>user_messages.sender_id)%>">
-			            		<% if @user_messages_sender_last.sender.id ==  user_messages.sender.id %><span></span><% end %>
+			            		<%# if @user_messages_sender_last.sender.id ==  user_messages.sender.id %><!-- <span></span> --><%# end %>
 			            		<%= user_messages.sender.name %> <%= user_messages.sender.last_name %>
 			            	</a>
 			            	<% end %>
@@ -25,10 +28,10 @@
   		
 				<ul class="chat-menu">
 					<% @user_messages_receiver.each do |user_messages|%> 
-		            <li <% if user_messages.recipient_id = params[:recv_id] %> class="active" <% end %>>
+		            <li <% if user_messages.recipient_id == params[:recv_id].to_i %> class="active" <% end %>>
 		            	<% unless user_messages.recipient.id == current_user.id %>
 		            	<a style="margin:0" href="<%= messages_path(:recv_id =>user_messages.recipient_id)%>">
-		            		<% if @user_messages_receiver_last.recipient.id ==  user_messages.recipient.id %><span></span><% end %>
+		            	<!-- 	<%# if @user_messages_receiver_last.recipient.id ==  user_messages.recipient.id %><span></span><%# end %> -->
 		            		<%= user_messages.recipient.name %><%= user_messages.recipient.last_name %>
 		            	</a>
 		            	<% end %>
