--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,6 +1,6 @@
 <h4>Editing page</h4>
 
-<%= render 'form' %>
+<%= render 'form',:page => @page %>
 
 <%= link_to 'Show', @page %> |
 <%= link_to 'Back', pages_path %>
