--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -105,7 +105,7 @@
           </div>        
         </div>
       <% end %>
-      <%= will_paginate @posts %>
+      <span class="center_align"> <%= will_paginate @posts %> </span>
     </div>
   </div>
 </div>
