--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -62,7 +62,13 @@
               </div>
                 
                 <div class="booking-wrap">
-                <div class="bmar10 font10"><%= link_to "Show all", bookings_path %> / <%= link_to "Hide cancelled and past bookings", bookings_path(:cancelled => true) %></div>
+                <div class="bmar10 font10">
+                  <% if params[:cancelled].present? %>
+                    <%= link_to "Show all", bookings_path, :style=>"color:#000" %> / <%= link_to "Hide cancelled and past bookings", bookings_path(:cancelled => true) %>
+                  <% else %>
+                    <%= link_to "Show all", bookings_path %> / <%= link_to "Hide cancelled and past bookings", bookings_path(:cancelled => true), :style=>"color:#000" %>
+                  <% end %>
+                </div>
                     <% @bookings.each_with_index do |booking, index|%>
                     <div class="booking-box">
                         
