--- a/app/views/payement_transfers/search_payments.xls.erb
+++ b/app/views/payement_transfers/search_payments.xls.erb
@@ -1,1 +1,1 @@
-<%= render 'payement_transfers/reports_data.html.erb', :bookings => @bookings %>
+<%= render 'payement_transfers/reports_data.html.erb', :bookings => @payment_transfers %>
