updated overview controller in post overview page

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,7 @@
             <% end %>
 
            </div>
-               <div class="sam"><p class="sq">$<%= @post.price_sq_ft.to_i %>/sq.ft. <span class="sq1">for entire duration</span></p></div>
+               <div class="sam"><p class="sq">$<%= @post.price_sq_ft.to_f %>/sq.ft. <span class="sq1">for entire duration</span></p></div>
                 
                  </div> 
               
