--- a/app/views/order_receives/payments.html.erb
+++ b/app/views/order_receives/payments.html.erb
@@ -20,11 +20,12 @@
                 	<%if booking.stripe_charge_id.present? %>
                     <span>Payment type</span> :
 
-                            <% if booking.is_cancel == true %>
-                               Cancelled
-                            <% else %>
-                               <%= payment_status(booking) %>
-                            <% end %>
+                        <% if booking.is_cancel == true %>
+                            Cancelled
+                        <% else %>
+                            <%= payment_status(booking) %>
+                        <% end %>
+                        
                     <%end%>
                    
                     <p>
@@ -33,7 +34,12 @@
                 </div>
                 
                 <div class="pay-col pay-col1">
-                	<span>To/From</span>: <%= booking.poster_name.capitalize rescue nil %> <%= booking.poster_last_name[0,1] rescue nil%>
+                    <% if booking.user_id == current_user.id %>
+
+                	   <span>To/From</span>: <%= booking.poster_name.capitalize rescue nil %> <%= booking.poster_last_name[0,1] rescue nil%>
+                    <% else %>
+                        <span>To/From</span>: <%= booking.user_name.capitalize rescue nil %> <%= booking.user_last_name[0,1] rescue nil%>
+                    <% end %>
                 </div>
                 
                 <div class="pay-col pay-col1">
