--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="comments">
-<%= render :partial => 'comments/comments', :locals => { :comments => @comments } %>
+<%= render 'comments',  :comments => @comments  %>
 </div>
 
 
