--- a/app/views/comments/books.html.erb
+++ b/app/views/comments/books.html.erb
@@ -1,6 +1,6 @@
 
 <div class="comments">
-<%= render :partial => 'comments/book_comment', :locals => { :comments => @comments } %>
+<%= render 'book_comment', :comments => @comments  %>
 </div>
 
 
