--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Editing comment</h1>
 
-<%= render 'form' %>
+<%= render 'form', :comments => @comments %>
+
 
 <%= link_to 'Show', @comment %> |
 <%= link_to 'Back', comments_path %>
