--- a/app/views/payement_transfers/_reports_data.html.erb
+++ b/app/views/payement_transfers/_reports_data.html.erb
@@ -24,6 +24,7 @@
 </tr>
 
 <% bookings.each_with_index do |booking, index| %>
+
 <tr>
   <td><%= index + 1 %></td>
   <td><%= booking.created_at.strftime('%d-%m-%Y')%></td>
@@ -41,9 +42,9 @@
   <td>0.25</td>
   <td><%= booking.cut_off_price.round(5) rescue nil %></td>
   <td><%= booking.refund_finder - ((booking.refund_finder * 2.9)/100).round(5) rescue nil %></td>
-  <td><%= ((booking.refund_finder * 2.9)/100).round(5) rescue nil %>
-  <td><%= booking.refund_finder.round(5) rescue nil %>
-  <td><%= booking.commission.round(5) rescue nil %>
+  <td><%= ((booking.refund_finder * 2.9)/100).round(5) rescue nil %></td>
+  <td><%= booking.refund_finder.round(5) rescue nil %></td>
+  <td><%= booking.commission.round(5) rescue nil %></td>
 
 </tr>
 <% end %>
