Payment page updated

--- a/app/views/order_receives/payments.html.erb
+++ b/app/views/order_receives/payments.html.erb
@@ -29,7 +29,7 @@
                     <%end%>
                    
                     <p>
-                    <%= link_to "View order received", booking_path(booking.id) %>
+                        <%= post_link(booking) %>
                     </p>
                 </div>
                 
