--- a/app/views/messages/_reply.html.erb
+++ b/app/views/messages/_reply.html.erb
@@ -1,5 +1,5 @@
 
-   <%= form_for(@message,:html => {:id => "reply_message"}, :remote => true) do |f| %>
+   <%= form_for(message,:html => {:id => "reply_message"}, :remote => true) do |f| %>
       <%= f.text_area :body ,:rows=>"3" %>
       <%= hidden_field_tag :recipient_id, params[:recv_id] %>
       <%= hidden_field_tag :reply,"reply"%>
