--- a/app/views/booked_mailer/booked_a_spaces.pdf.erb
+++ b/app/views/booked_mailer/booked_a_spaces.pdf.erb
@@ -1,14 +1,145 @@
+<style>
 
-    <p>Date of booking : <%= @booking.created_at.strftime("%B %d,%Y") %></p>
-    <p>Booked area : <%= @booking.area %> Sq. Feet </p>
-    
-    <p>Drop-off : <%= @booking.dropoff_date.strftime("%B %d,%Y") %></br>
-                  Drive : <% if @booking.dropoff_price != 0 %> $<%= @booking.dropoff_price %> <% else %> Unavailable <% end %> </p>
-                          
-    <p>Pick-up : <%= @booking.pickup_date.strftime("%B %d,%Y") %></br>
-                  Drive :  <% if @booking.pickup_price != 0 %> $<%= @booking.pickup_price %> <% else %> Unavailable <% end %></p>
-                          
-    <p>Total Amount $<%= @booking.price %></p>
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+a {
+  color: #5D6975;
+  text-decoration: underline;
+}
+
+body {
+  position: relative;
+  width: 21cm;  
+  height: 27cm; 
+  margin: 0 auto; 
+  color: #001028;
+  background: #FFFFFF; 
+  font-family: Avenir, sans-serif; 
+  font-size: 12px; 
+  /*font-family: Avenir;*/
+}
+
+header {
+  padding: 10px 0;
+  margin-bottom: 30px;
+}
+
+#logo {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+#logo img {
+  height: 50px;
+}
+
+h1 {
+  border-top: 1px solid  #5D6975;
+  border-bottom: 1px solid  #5D6975;
+  color: #5D6975;
+  font-size: 2.4em;
+  line-height: 1.4em;
+  font-weight: normal;
+  text-align: center;
+  margin: 0 0 20px 0;
+  background-color: #D8D8D8;
+/*  background: url(dimension.png);
+*/}
+
+#project {
+  float: left;
+}
+
+#project span {
+  color: #5D6975;
+  text-align: right;
+  width: 52px;
+  margin-right: 10px;
+  display: inline-block;
+  font-size: 0.8em;
+}
+
+#company {
+  float: right;
+  text-align: right;
+}
+
+#project div,
+#company div {
+  white-space: nowrap;        
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin-bottom: 20px;
+}
+
+table tr:nth-child(2n-1) td {
+  background: #F5F5F5;
+}
+
+table th,
+table td {
+  text-align: center;
+}
+
+table th {
+  padding: 5px 20px;
+  color: #5D6975;
+  border-bottom: 1px solid #C1CED9;
+  white-space: nowrap;        
+  font-weight: normal;
+}
+
+table .service,
+table .desc {
+  text-align: left;
+}
+
+table td {
+  padding: 20px;
+  text-align: right;
+}
+
+table td.service,
+table td.desc {
+  vertical-align: top;
+}
+
+table td.unit,
+table td.qty,
+table td.total {
+  font-size: 1.2em;
+}
+
+table td.grand {
+  border-top: 1px solid #5D6975;;
+}
+
+#notices .notice {
+  color: #5D6975;
+  font-size: 1.2em;
+}
+
+footer {
+  color: #5D6975;
+  width: 100%;
+  height: 30px;
+  position: absolute;
+  bottom: 0;
+  border-top: 1px solid #C1CED9;
+  padding: 8px 0;
+  text-align: center;
+}
+
+</style>
 
 
 
@@ -17,12 +148,12 @@
   <head>
     <meta charset="utf-8">
     <title>Dinobo Invoice</title>
-    <link rel="stylesheet" href="style.css" media="all" />
+    
   </head>
   <body>
     <header class="clearfix">
       <div id="logo">
-        <img src="logo.png">
+        <img src="http://store-finding-system.herokuapp.com/assets/logo-1cdfedf4f4bcc76ab89b9a1a4099c95a.png" alt="logo">
       </div>
       <h1>Invoice</h1>
       <div id="company" class="clearfix">
@@ -57,7 +188,7 @@
             <td class="desc"></td>
             <td class="unit">$<%= @booking.post.price_sq_ft %></td>
             <td class="qty"><%= @booking.area %> sq. ft.</td>
-            <td class="total">$<%= (@booking.post.price_sq_ft * @booking.area) %></td>
+            <td class="total">$<%= (@booking.post.price_sq_ft * @booking.area.to_i) %></td>
           </tr>
 
           <% if @booking.dropoff_price != 0 %>
